clang/test/BSC/Negative/SafeZone/empty_param_or_variable_param/empty_param_or_variable_param.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

safe void fun1() {}  // expected-error {{need void parameter declaration, empty parameter is forbidden in the safe function}}
unsafe void fun2() {} 

safe void fun1();    // expected-error {{need void parameter declaration, empty parameter is forbidden in the safe function}}
unsafe void fun2();

safe void (*p)();    // expected-error {{need void parameter declaration, empty parameter is forbidden in the safe function}}
unsafe void (*q)();

safe void fun3(void) {}
safe void fun4(void);
safe void (*p)(void); 

safe void fun5(int a, ...) {}  // expected-error {{variadic parameter is forbidden in the safe function}}
unsafe void fun6(int a, ...) {}

safe void fun5(int a, ...);    // expected-error {{variadic parameter is forbidden in the safe function}}
unsafe void fun6(int a, ...);

safe void (*m)(int a, ...);   // expected-error {{variadic parameter is forbidden in the safe function}}
unsafe void (*n)(int a, ...);

// Variadic WITH format attribute - should be allowed (no error expected)
__attribute__((format(printf, 1, 2)))
safe void fun7(const char * borrow fmt, ...) {}

__attribute__((format(printf, 1, 2)))
safe void fun7(const char * borrow fmt, ...);

__attribute__((format(printf, 1, 2)))
safe void (*o)(const char * borrow fmt, ...);

// Variadic WITHOUT format attribute - should still error
safe void fun8(int a, const char * borrow fmt, ...) {}  // expected-error {{variadic parameter is forbidden in the safe function}}
